crates/aranya-policy-lang/tests/data/tictactoe.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
assertion_line: 133
expression: err
---
error: Syntax error
   |
51 |         let gameID = envelope::command_id(envelope)
   |         ^ expected add, subtract, greater_than, less_than, greater_than_or_equal, less_than_or_equal, equal, not_equal, and, or, dot, substruct, cast, or is
